--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.platform=h2
-
 
 
 ## MULTIPART (MultipartProperties)
@@ -16,5 +15,4 @@ spring.servlet.multipart.max-request-size=215MB
 
 ## File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
-file.upload-dir=D:/images
-
+file.upload-dir=/Users/82109/images
